Fixed horizontal scrolling issue

--- a/travelneer-react/src/views/variables.scss
+++ b/travelneer-react/src/views/variables.scss
@@ -11,12 +11,13 @@ $xs-screen-max: 370px;
 $travelneer-green: #00ff66;
 $menu-background: #2d3138;
 $travelneer-dark: #2d3138;
-$travelneer-blue: #01a2aa; //#68b7ba;
+$travelneer-blue: #01a2aa;
 $travelneer-background: #F0F0F0;
 
 
 :global {
     body {
-        background-color: $travelneer-background
+        background-color: $travelneer-background;
+        overflow-x: hidden;
     }
   }
